Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
 <p>R</p>
 
+<p>Stats help - see <a href="http://biometry.github.io/APES/">http://biometry.github.io/APES/</a></p>
+
 <h3>
 <a name="authors-and-copyright" class="anchor" href="#authors-and-copyright"><span class="octicon octicon-link"></span></a>Authors and copyright</h3>
 
