--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
+
+<h3>
+<a name="lecture-notes" class="anchor" href="#lecture-notes"><span class="octicon octicon-link"></span></a>General info</h3>
+
+<ul>
+<li>Syllabus 2014 - your timetable</li>
+<li>Campus online page</li>
+<li>Ilias page - course material will be posted here</li>
+</ul>
+
 <h3>
 <a name="lecture-notes" class="anchor" href="#lecture-notes"><span class="octicon octicon-link"></span></a>Lecture notes</h3>
 
