Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,31 +29,29 @@
       </header>
       <section>
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="general-infos" class="anchor" href="#general-infos"><span class="octicon octicon-link"></span></a>General infos</h3>
 
-
-<h3>
-<a name="lecture-notes" class="anchor" href="#lecture-notes"><span class="octicon octicon-link"></span></a>General info</h3>
+<p>This site contains material and links for the MSc course Research Skills. Some background to the course <a href="http://florianhartig.wordpress.com/teaching/research-skills/">here</a>. Some important material </p>
 
 <ul>
-<li>Syllabus 2014 - your timetable</li>
-<li>Campus online page</li>
+<li>
+<a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2014.pdf?raw=true">Syllabus</a> / timetable for the course</li>
+<li><a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">Campus online</a></li>
 <li>Ilias page - course material will be posted here</li>
-</ul>
-
-<h3>
+</ul><h3>
 <a name="lecture-notes" class="anchor" href="#lecture-notes"><span class="octicon octicon-link"></span></a>Lecture notes</h3>
+
+<p>This is still work in progress, but I'm planning to distribute some lecture notes for this course. </p>
 
 <h3>
 <a name="labs--tutorials" class="anchor" href="#labs--tutorials"><span class="octicon octicon-link"></span></a>Labs / tutorials</h3>
 
-<p>LaTex</p>
+<p>We will do a few practical exercises. Y</p>
 
-<p>R</p>
-
-<p>Stats help - see <a href="http://biometry.github.io/APES/">http://biometry.github.io/APES/</a></p>
-
-<h3>
+<ul>
+<li>R / Stats: script, example, <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
+<li>LaTex: script, example</li>
+</ul><h3>
 <a name="authors-and-copyright" class="anchor" href="#authors-and-copyright"><span class="octicon octicon-link"></span></a>Authors and copyright</h3>
 
 <p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a><br>This work is licensed under a <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
