Revert "Create gh-pages branch via GitHub"
This reverts commit b90d67718799db6b426d6900d1bd7db8b747b363.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Researchskills</h1>
-        <p>A course on skills for doing quantitative research at the graduate level</p>
+        <p>Lecture notes for research skills course</p>
 
         <p class="view"><a href="https://github.com/florianhartig/ResearchSkills">View the Project on GitHub <small>florianhartig/ResearchSkills</small></a></p>
 
@@ -28,25 +28,33 @@
         </ul>
       </header>
       <section>
-        <h1>
-<a name="researchskills" class="anchor" href="#researchskills"><span class="octicon octicon-link"></span></a>ResearchSkills</h1>
+        <h3>
+<a name="general-infos" class="anchor" href="#general-infos"><span class="octicon octicon-link"></span></a>General infos</h3>
 
-<p>Material for the 3-week MSc block "Research Skills". Final material at <a href="http://florianhartig.github.io/ResearchSkills/">http://florianhartig.github.io/ResearchSkills/</a> </p>
+<p>This site contains material and links for the MSc course Research Skills. Some background to the course <a href="http://florianhartig.wordpress.com/teaching/research-skills/">here</a>. Some important material </p>
+
+<ul>
+<li>
+<a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2014.pdf?raw=true">Syllabus</a> / timetable for the course</li>
+<li><a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">Campus online</a></li>
+<li>Ilias page - course material will be posted here</li>
+</ul><h3>
+<a name="lecture-notes" class="anchor" href="#lecture-notes"><span class="octicon octicon-link"></span></a>Lecture notes</h3>
+
+<p>This is still work in progress, but I'm planning to distribute some lecture notes for this course. </p>
 
 <h3>
-<a name="objective" class="anchor" href="#objective"><span class="octicon octicon-link"></span></a>Objective</h3>
+<a name="labs--tutorials" class="anchor" href="#labs--tutorials"><span class="octicon octicon-link"></span></a>Labs / tutorials</h3>
 
-<p>To learn discipline-independent skills for doing research at the graduate-level.</p>
+<p>We will do a few practical exercises. Y</p>
 
-<h3>
-<a name="prerequisites" class="anchor" href="#prerequisites"><span class="octicon octicon-link"></span></a>Prerequisites</h3>
+<ul>
+<li>R / Stats: script, example, <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
+<li>LaTex: script, example</li>
+</ul><h3>
+<a name="authors-and-copyright" class="anchor" href="#authors-and-copyright"><span class="octicon octicon-link"></span></a>Authors and copyright</h3>
 
-<p>An undergraduate degree, ideally in science. </p>
-
-<h3>
-<a name="topics" class="anchor" href="#topics"><span class="octicon octicon-link"></span></a>Topics</h3>
-
-<p>Introduction to philosophy and history of science, scientific method, finding your question, design of experiments, ensuring reproducibility, data analysis in R, visualization, introduction to LaTeX, scientific writing, logic and clarity, scientific presentations, good scientific practice</p>
+<p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a><br>This work is licensed under a <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/florianhartig">florianhartig</a></p>
