--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 <a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2014.pdf?raw=true">Syllabus</a> / timetable for the course</li>
 <li><a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">Campus online</a></li>
 <li>Ilias page - course material will be posted here</li>
-</ul><h3>
+</ul><p>Questions / contact: <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a></p>
+
+<h3>
 <a name="lecture-notes" class="anchor" href="#lecture-notes"><span class="octicon octicon-link"></span></a>Lecture notes</h3>
 
 <p>This is still work in progress, but I'm planning to distribute some lecture notes for this course. </p>
@@ -46,13 +48,16 @@
 <h3>
 <a name="labs--tutorials" class="anchor" href="#labs--tutorials"><span class="octicon octicon-link"></span></a>Labs / tutorials</h3>
 
-<p>We will do a few practical exercises. Y</p>
+<p>The course contains a few practical exercises, notably on R, basic statistics, and LaTeX, which are not covered in the lecture note. Tuto</p>
 
 <ul>
-<li>R / Stats: script, example, <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
-<li>LaTex: script, example</li>
+<li>R / Stats: tutorial, , <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
+<li>LaTex: tutorial, <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/example">code</a>
+</li>
 </ul><h3>
 <a name="authors-and-copyright" class="anchor" href="#authors-and-copyright"><span class="octicon octicon-link"></span></a>Authors and copyright</h3>
+
+<p>Unless specified otherwise: Florian Hartig, reuse permitted under Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</p>
 
 <p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a><br>This work is licensed under a <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
       </section>
