Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
         <h3>
 <a name="general-infos" class="anchor" href="#general-infos"><span class="octicon octicon-link"></span></a>General infos</h3>
 
-<p>This site contains material and links for the MSc course Research Skills. Some background to the course <a href="http://florianhartig.wordpress.com/teaching/research-skills/">here</a>. Some important material </p>
+<p>This site contains material and links for the MSc course Research Skills. The <strong>objective</strong> of this MSc course is to to learn discipline-independent skills for doing quantitative research at the graduate-level. Content includes</p>
+
+<p><em>Introduction to philosophy and history of science, scientific method, finding your question, design of experiments, ensuring reproducibility, data analysis in R, visualization, introduction to LaTeX, scientific writing, logic and clarity, scientific presentations, good scientific practice</em></p>
+
+<h3>
+<a name="important-links-for-participants" class="anchor" href="#important-links-for-participants"><span class="octicon octicon-link"></span></a>Important links for participants</h3>
 
 <ul>
 <li>
@@ -41,23 +46,17 @@
 </ul><p>Questions / contact: <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a></p>
 
 <h3>
-<a name="lecture-notes" class="anchor" href="#lecture-notes"><span class="octicon octicon-link"></span></a>Lecture notes</h3>
-
-<p>This is still work in progress, but I'm planning to distribute some lecture notes for this course. </p>
-
-<h3>
-<a name="labs--tutorials" class="anchor" href="#labs--tutorials"><span class="octicon octicon-link"></span></a>Labs / tutorials</h3>
-
-<p>The course contains a few practical exercises, notably on R, basic statistics, and LaTeX, which are not covered in the lecture note. Tuto</p>
+<a name="materials-and-further-readings" class="anchor" href="#materials-and-further-readings"><span class="octicon octicon-link"></span></a>Materials and further readings</h3>
 
 <ul>
-<li>R / Stats: tutorial, , <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
-<li>LaTex: tutorial, <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/example">code</a>
+<li>Lecture notes will be available soon</li>
+<li>R / Stats: tutorial, code, <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
+<li>LaTex: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/LatexHowTo/how_to_latex.pdf">tutorial</a>, <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/example">code</a>
 </li>
 </ul><h3>
 <a name="authors-and-copyright" class="anchor" href="#authors-and-copyright"><span class="octicon octicon-link"></span></a>Authors and copyright</h3>
 
-<p>Unless specified otherwise: Florian Hartig, reuse permitted under Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</p>
+<p>Unless specified otherwise, the author of these materials is Florian Hartig. Reuse permitted under Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</p>
 
 <p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a><br>This work is licensed under a <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
       </section>
