Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <ul>
 <li>Lecture notes will be available soon</li>
-<li>R / Stats: tutorial, code, <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
+<li>R / Stats: tutorial, <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/R/ExampleCode">code</a>, <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
 <li>LaTex: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/LatexHowTo/how_to_latex.pdf">tutorial</a>, <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/example">code</a>
 </li>
 </ul><h3>
