--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Researchskills : Lecture notes for research skills course">
+    <title>Researchskills by florianhartig</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Researchskills</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Researchskills</h1>
+        <p>Lecture notes for research skills course</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/florianhartig/ResearchSkills">View on GitHub</a>
+        <p class="view"><a href="https://github.com/florianhartig/ResearchSkills">View the Project on GitHub <small>florianhartig/ResearchSkills</small></a></p>
 
-          <h1 id="project_title">Researchskills</h1>
-          <h2 id="project_tagline">Lecture notes for research skills course</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/florianhartig/ResearchSkills/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/florianhartig/ResearchSkills/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/florianhartig/ResearchSkills/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/florianhartig/ResearchSkills/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/florianhartig/ResearchSkills">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h3>
 <a name="general-infos" class="anchor" href="#general-infos"><span class="octicon octicon-link"></span></a>General infos</h3>
 
@@ -64,17 +61,12 @@
 
 <p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a><br>This work is licensed under a <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Researchskills maintained by <a href="https://github.com/florianhartig">florianhartig</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/florianhartig">florianhartig</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
