--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h3>
 <a name="general-infos" class="anchor" href="#general-infos"><span class="octicon octicon-link"></span></a>General infos</h3>
 
-<p>This site contains material and links for the MSc course Research Skills. The <strong>objective</strong> of this MSc course is to to learn discipline-independent skills for doing quantitative research at the graduate-level. Content includes</p>
+<p>This site contains material and links for the MSc course Research Skills. The objective of this MSc course is to to learn discipline-independent skills for doing quantitative research at the graduate-level. Content includes</p>
 
 <p><em>Introduction to philosophy and history of science, scientific method, finding your question, design of experiments, ensuring reproducibility, data analysis in R, visualization, introduction to LaTeX, scientific writing, logic and clarity, scientific presentations, good scientific practice</em></p>
 
