Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
 </ul><p>Questions / contact: <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a></p>
 
 <h3>
-<a name="materials-and-further-readings" class="anchor" href="#materials-and-further-readings"><span class="octicon octicon-link"></span></a>Materials and further readings</h3>
+<a name="course-materials-and-further-readings" class="anchor" href="#course-materials-and-further-readings"><span class="octicon octicon-link"></span></a>Course materials and further readings</h3>
 
 <ul>
-<li>Lecture notes will be available soon</li>
-<li>R / Stats: tutorial, <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/R/ExampleCode">code</a>, <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
-<li>LaTex: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/LatexHowTo/how_to_latex.pdf">tutorial</a>, <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/example">code</a>
+<li>Slides of the lectures will be posted on Ilias</li>
+<li>Lecture notes will be available here soon</li>
+<li>R / Stats material: tutorial / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/R/ExampleCode">code</a> / <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
+<li>LaTex material: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/LatexHowTo/how_to_latex.pdf">tutorial</a> / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/example">code</a>
 </li>
 </ul><h3>
 <a name="authors-and-copyright" class="anchor" href="#authors-and-copyright"><span class="octicon octicon-link"></span></a>Authors and copyright</h3>
