--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 <li><a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">Campus online</a></li>
 <li>
 <a href="https://ilias.uni-freiburg.de/goto.php?target=exc_262099&amp;client_id=unifreiburg">Ilias page</a> - course material will be posted here</li>
-</ul><p>Questions / contact: <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a></p>
+</ul>
+
+<p>Questions / contact: <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a></p>
 
 <h3>
 <a name="course-materials-and-further-readings" class="anchor" href="#course-materials-and-further-readings"><span class="octicon octicon-link"></span></a>Course materials and further readings</h3>
@@ -52,10 +54,12 @@
 <ul>
 <li>Slides of the lectures will be posted on Ilias</li>
 <li>Lecture notes will be available here soon</li>
-<li>R / Stats material: tutorial / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/R/ExampleCode">code</a> / <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
+<li>R / Stats material: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/R/Crashcourse-StatisticsWithR.pdf">tutorial</a> / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/R/ExampleCode">code</a> / <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
 <li>LaTex material: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/LatexHowTo/how_to_latex.pdf">tutorial</a> / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/example">code</a>
 </li>
-</ul><h3>
+</ul>
+
+<h3>
 <a name="authors-and-copyright" class="anchor" href="#authors-and-copyright"><span class="octicon octicon-link"></span></a>Authors and copyright</h3>
 
 <p>Unless specified otherwise, the author of these materials is Florian Hartig. Reuse permitted under Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</p>
