--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -17,10 +19,7 @@
       <header>
         <h1>Researchskills</h1>
         <p>Lecture notes for research skills course</p>
-
         <p class="view"><a href="https://github.com/florianhartig/ResearchSkills">View the Project on GitHub <small>florianhartig/ResearchSkills</small></a></p>
-
-
         <ul>
           <li><a href="https://github.com/florianhartig/ResearchSkills/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/florianhartig/ResearchSkills/tarball/master">Download <strong>TAR Ball</strong></a></li>
@@ -31,9 +30,12 @@
         <h3>
 <a name="general-infos" class="anchor" href="#general-infos"><span class="octicon octicon-link"></span></a>General infos</h3>
 
-<p>This site contains material and links for the MSc course Research Skills. The objective of this MSc course is to to learn discipline-independent skills for doing quantitative research at the graduate-level. Content includes</p>
+<p>This site contains material and links for the MSc module Research Skills. The objective of this course is to to learn discipline-independent skills for doing quantitative research at the graduate-level. </p>
 
-<p><em>Introduction to philosophy and history of science, scientific method, finding your question, design of experiments, ensuring reproducibility, data analysis in R, visualization, introduction to LaTeX, scientific writing, logic and clarity, scientific presentations, good scientific practice</em></p>
+<h3>
+<a name="course-content" class="anchor" href="#course-content"><span class="octicon octicon-link"></span></a>Course content</h3>
+
+<p>Introduction to philosophy and history of science, scientific method, finding your question, design of experiments, ensuring reproducibility, data analysis in R, visualization, introduction to LaTeX, scientific writing, logic and clarity, scientific presentations, good scientific practice</p>
 
 <h3>
 <a name="important-links-for-participants" class="anchor" href="#important-links-for-participants"><span class="octicon octicon-link"></span></a>Important links for participants</h3>
@@ -66,12 +68,12 @@
 
 <p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a><br>This work is licensed under a <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/florianhartig">florianhartig</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <footer>
+      <p>Project maintained by <a href="https://github.com/florianhartig">florianhartig</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
