Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 
 <ul>
 <li>
-<a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2014.pdf?raw=true">Syllabus</a> / timetable for the course</li>
-<li><a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">Campus online</a></li>
+<a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2014.pdf?raw=true">Syllabus</a> - timetable and room information for the course</li>
+<li>
+<a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">Campus management</a> - the course description in the course catalog of the university</li>
 <li>
 <a href="https://ilias.uni-freiburg.de/goto.php?target=exc_262099&amp;client_id=unifreiburg">Ilias page</a> - course material will be posted here</li>
 </ul>
