Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 
 <ul>
 <li>Slides of the lectures will be posted on Ilias</li>
-<li>Lecture notes will be available here soon</li>
-<li>R / Stats material: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/R/Script/Crashcourse-StatisticsWithR.pdf">tutorial</a> / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/R/ExampleCode">code</a> / <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
-<li>LaTex material: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/LatexHowTo/how_to_latex.pdf">tutorial</a> / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/example">code</a>
+<li><p>Lecture notes will be available here soon</p></li>
+<li><p>Practical Literature Research: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Literature/Practical/Practical_LiteratureResearch.pdf">practical</a></p></li>
+<li>Practicals R Stats: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/R/Script/Crashcourse-StatisticsWithR.pdf">tutorial</a> / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/R/ExampleCode">code</a> / <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
+<li>Practicals LaTeX: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/LatexHowTo/how_to_latex.pdf">tutorial</a> / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/example">code</a>
 </li>
 </ul>
 
