Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Researchskills : Lecture notes for research skills course">
+    <title>Researchskills by florianhartig</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>Researchskills</title>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/florianhartig/ResearchSkills">View on GitHub</a>
-
-          <h1 id="project_title">Researchskills</h1>
-          <h2 id="project_tagline">Lecture notes for research skills course</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/florianhartig/ResearchSkills/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/florianhartig/ResearchSkills/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="wrapper">
+      <header>
+        <h1>Researchskills</h1>
+        <p>Lecture notes for research skills course</p>
+        <p class="view"><a href="https://github.com/florianhartig/ResearchSkills">View the Project on GitHub <small>florianhartig/ResearchSkills</small></a></p>
+        <ul>
+          <li><a href="https://github.com/florianhartig/ResearchSkills/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/florianhartig/ResearchSkills/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/florianhartig/ResearchSkills">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h3>
 <a name="general-infos" class="anchor" href="#general-infos"><span class="octicon octicon-link"></span></a>General infos</h3>
 
@@ -58,10 +54,20 @@
 <h3>
 <a name="course-materials-and-further-readings" class="anchor" href="#course-materials-and-further-readings"><span class="octicon octicon-link"></span></a>Course materials and further readings</h3>
 
+<h4>
+<a name="lecture-notes" class="anchor" href="#lecture-notes"><span class="octicon octicon-link"></span></a>Lecture notes</h4>
+
 <ul>
 <li>Slides of the lectures, as well as further readings and exercises will be posted on Ilias</li>
-<li><p>Lecture notes will be available here soon</p></li>
-<li><p>Practical Literature Research: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Literature/Practical/Practical_LiteratureResearch.pdf">practical</a></p></li>
+<li>Lecture notes will be available here soon</li>
+</ul>
+
+<h4>
+<a name="practicals" class="anchor" href="#practicals"><span class="octicon octicon-link"></span></a>Practicals</h4>
+
+<ul>
+<li>Practical Literature Research: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Literature/Practical/Practical_LiteratureResearch.pdf">practical</a>
+</li>
 <li>Practicals R Stats: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/R/Script/Crashcourse-StatisticsWithR.pdf">tutorial</a> / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/R/ExampleCode">code</a> / <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
 <li>Practicals LaTeX: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/LatexHowTo/how_to_latex.pdf">tutorial</a> / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/example">code</a>
 </li>
@@ -75,16 +81,11 @@
 <p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png"></a><br>This work is licensed under a <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
       </section>
     </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Researchskills maintained by <a href="https://github.com/florianhartig">florianhartig</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
+    <footer>
+      <p>Project maintained by <a href="https://github.com/florianhartig">florianhartig</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
