Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
       </header>
       <section>
         <h3>
-<a name="general-infos" class="anchor" href="#general-infos"><span class="octicon octicon-link"></span></a>General infos</h3>
+<a id="general-infos" class="anchor" href="#general-infos" aria-hidden="true"><span class="octicon octicon-link"></span></a>General infos</h3>
 
 <p>This site contains material and links for the MSc module Research Skills. The objective of this course is to to learn discipline-independent skills for doing quantitative research at the graduate-level. </p>
 
 <h3>
-<a name="course-content" class="anchor" href="#course-content"><span class="octicon octicon-link"></span></a>Course content</h3>
+<a id="course-content" class="anchor" href="#course-content" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course content</h3>
 
 <p>Introduction to philosophy and history of science, scientific method, finding your question, design of experiments, ensuring reproducibility, data analysis in R, visualization, introduction to LaTeX, scientific writing, logic and clarity, scientific presentations, good scientific practice</p>
 
 <h3>
-<a name="important-links-for-participants" class="anchor" href="#important-links-for-participants"><span class="octicon octicon-link"></span></a>Important links for participants</h3>
+<a id="important-links-for-participants" class="anchor" href="#important-links-for-participants" aria-hidden="true"><span class="octicon octicon-link"></span></a>Important links for participants</h3>
 
 <ul>
 <li>
@@ -52,10 +52,10 @@
 <p>Questions / contact: <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a></p>
 
 <h3>
-<a name="course-materials-and-further-readings" class="anchor" href="#course-materials-and-further-readings"><span class="octicon octicon-link"></span></a>Course materials and further readings</h3>
+<a id="course-materials-and-further-readings" class="anchor" href="#course-materials-and-further-readings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course materials and further readings</h3>
 
 <h4>
-<a name="lecture-notes" class="anchor" href="#lecture-notes"><span class="octicon octicon-link"></span></a>Lecture notes</h4>
+<a id="lecture-notes" class="anchor" href="#lecture-notes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lecture notes</h4>
 
 <ul>
 <li>Slides of the lectures, as well as further readings and exercises will be posted on Ilias</li>
@@ -63,18 +63,18 @@
 </ul>
 
 <h4>
-<a name="practicals" class="anchor" href="#practicals"><span class="octicon octicon-link"></span></a>Practicals</h4>
+<a id="practicals" class="anchor" href="#practicals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Practicals</h4>
 
 <ul>
 <li>Practical Literature Research: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Literature/Practical/Practical_LiteratureResearch.pdf">practical</a>
 </li>
-<li>Practicals R Stats: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/R/Script/Crashcourse-StatisticsWithR.pdf">tutorial</a> / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/R/ExampleCode">code</a> / <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
+<li>Practicals R Stats: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/R/Script/Crashcourse-StatisticsWithR.pdf">tutorial</a> / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/R">code</a> / <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
 <li>Practicals LaTeX: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/LatexHowTo/how_to_latex.pdf">tutorial</a> / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/example">code</a>
 </li>
 </ul>
 
 <h3>
-<a name="authors-and-copyright" class="anchor" href="#authors-and-copyright"><span class="octicon octicon-link"></span></a>Authors and copyright</h3>
+<a id="authors-and-copyright" class="anchor" href="#authors-and-copyright" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and copyright</h3>
 
 <p>Unless specified otherwise, the author of these materials is Florian Hartig. Reuse permitted under Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</p>
 
