--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
 <ul>
 <li>
-<a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2014.pdf?raw=true">Syllabus</a> - timetable and room information for the course</li>
+<a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2015.pdf?raw=true">Syllabus</a> - timetable and room information for the course</li>
 <li>
 <a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">Campus management</a> - the course description in the course catalog of the university</li>
 <li>
-<a href="https://ilias.uni-freiburg.de/goto.php?target=exc_262099&amp;client_id=unifreiburg">Ilias page</a> - course material will be posted here</li>
+<a href="https://ilias.uni-freiburg.de/goto.php?target=crs_441816&client_id=unifreiburg">Ilias page</a> - course material will be posted here</li>
 </ul>
 
 <p>Questions / contact: <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a></p>
