Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Researchskills by florianhartig</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
@@ -38,7 +38,7 @@
 <li>
 <a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">Campus management</a> - the course description in the course catalog of the university</li>
 <li>
-<a href="https://ilias.uni-freiburg.de/goto.php?target=crs_441816&client_id=unifreiburg">Ilias page</a> - course material will be posted here</li>
+<a href="https://ilias.uni-freiburg.de/goto.php?target=exc_262099&amp;client_id=unifreiburg">Ilias page</a> - course material will be posted here</li>
 </ul>
 
 <p>Questions / contact: <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a></p>
@@ -95,4 +95,3 @@
   
   </body>
 </html>
-
