--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
 <h3>
 <a id="course-content" class="anchor" href="#course-content" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course content</h3>
 
-<p>Introduction to philosophy and history of science, scientific method, finding your question, design of experiments, ensuring reproducibility, data analysis in R, visualization, introduction to LaTeX, scientific writing, logic and clarity, scientific presentations, good scientific practice</p>
+<p><em>Introduction to philosophy and history of science, scientific method, finding your question, design of experiments, ensuring reproducibility, data analysis in R, visualization, introduction to LaTeX, scientific writing, logic and clarity, scientific presentations, good scientific practice</em></p>
 
 <h3>
 <a id="important-links-for-participants" class="anchor" href="#important-links-for-participants" aria-hidden="true"><span class="octicon octicon-link"></span></a>Important links for participants</h3>
 
 <ul>
 <li>
-<a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2015.pdf?raw=true">Syllabus</a> - timetable and room information for the course</li>
+<strong><a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2015.pdf?raw=true">Syllabus 2015</a></strong> - timetable and room information for the course</li>
 <li>
-<a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">Campus management</a> - the course description in the course catalog of the university</li>
+<strong><a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">Campus management</a></strong> - the course description in the course catalog of the university</li>
 <li>
-<a href="https://ilias.uni-freiburg.de/goto.php?target=exc_262099&amp;client_id=unifreiburg">Ilias page</a> - course material will be posted here</li>
+<strong><a href="https://ilias.uni-freiburg.de/goto.php?target=exc_262099&amp;client_id=unifreiburg">Ilias page</a></strong> - course material will be posted here</li>
+<li>Questions / contact: <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a>
+</li>
 </ul>
-
-<p>Questions / contact: <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a></p>
 
 <h3>
 <a id="course-materials-and-further-readings" class="anchor" href="#course-materials-and-further-readings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course materials and further readings</h3>
@@ -50,20 +50,27 @@
 <a id="lecture-notes" class="anchor" href="#lecture-notes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lecture notes</h4>
 
 <ul>
-<li>Slides of the lectures, as well as further readings and exercises will be posted on Ilias</li>
-<li>Lecture notes will be available here soon</li>
+<li>
+<strong>Slides</strong> of the lectures, as well as further readings and exercises will be posted on Ilias</li>
+<li>
+<strong>Lecture</strong> notes will be available here soon</li>
 </ul>
 
 <h4>
-<a id="practicals" class="anchor" href="#practicals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Practicals</h4>
+<a id="labs--practicals" class="anchor" href="#labs--practicals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Labs / Practicals</h4>
 
 <ul>
-<li>Practical Literature Research: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Literature/Practical/Practical_LiteratureResearch.pdf">practical</a>
-</li>
-<li>Practicals R Stats: <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/R/Script/Crashcourse-StatisticsWithR.pdf">tutorial</a> / <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/R">code</a> / <a href="http://biometry.github.io/APES/">stats help website</a> (experimental)</li>
-<li><a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl">Version Control</a></li>
 <li>
-<a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">LaTeX</a>, see in particular this <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">pdf tutorial</a> </li>
+<strong><a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch">Literature Research</a></strong> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Literature/Practical/Practical_LiteratureResearch.pdf">practical</a>
+</li>
+<li>**<a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization">Project Organization</a>
+</li>
+<li>
+<a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">LaTeX</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">script</a> </li>
+<li>
+<a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/R">Statistics with R</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf">script</a>
+</li>
+<li><a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl">Version Control</a></li>
 <li><a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ScientificWriting">Scientific Writing</a></li>
 </ul>
 
