Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -61,16 +61,19 @@
 
 <ul>
 <li>
-<strong><a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch">Literature Research</a></strong> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Literature/Practical/Practical_LiteratureResearch.pdf">practical</a>
-</li>
-<li>**<a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization">Project Organization</a>
+<strong>Literature Research</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch">Lab material</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Literature/Practical/Practical_LiteratureResearch.pdf">practical</a>
 </li>
 <li>
-<a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">LaTeX</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">script</a> </li>
-<li>
-<a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/R">Statistics with R</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf">script</a>
+<strong>Project Organization</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization">Lab material</a>
 </li>
-<li><a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl">Version Control</a></li>
+<li>
+<strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">Lab material</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">script</a> </li>
+<li>
+<strong>Statistics with R</strong> <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/Statistics">Lab material</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf">script</a>
+</li>
+<li>
+<strong>Version Control</strong> <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl">Lab material</a>
+</li>
 <li><a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ScientificWriting">Scientific Writing</a></li>
 </ul>
 
