Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
 <ul>
 <li>
-<strong><a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2015.pdf?raw=true">Syllabus 2015</a></strong> - timetable and room information for the course</li>
+<strong>Syllabus 2015</strong> (<a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2015.pdf?raw=true">link</a>) - timetable and room information for the course</li>
 <li>
-<strong><a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">Campus management</a></strong> - the course description in the course catalog of the university</li>
+<strong>Campus management</strong> (<a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">link</a>) - the course description in the course catalog of the university</li>
 <li>
-<strong><a href="https://ilias.uni-freiburg.de/goto.php?target=exc_262099&amp;client_id=unifreiburg">Ilias page</a></strong> - course material will be posted here</li>
+<strong>Ilias</strong> (<a href="https://ilias.uni-freiburg.de/goto.php?target=exc_262099&amp;client_id=unifreiburg">link</a>) - course material will be posted here</li>
 <li>Questions / contact: <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a>
 </li>
 </ul>
@@ -67,14 +67,16 @@
 <strong>Project Organization</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization">Lab material</a>
 </li>
 <li>
-<strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">Lab material</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">script</a> </li>
+<strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">Lab material</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">script</a></strong> </li>
 <li>
-<strong>Statistics with R</strong> <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/Statistics">Lab material</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf">script</a>
+<strong>Statistics with R</strong> <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/Statistics">Lab material</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf">script</a></strong>
 </li>
 <li>
 <strong>Version Control</strong> <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl">Lab material</a>
 </li>
-<li><a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ScientificWriting">Scientific Writing</a></li>
+<li>
+<strong>Scientific Writing</strong> <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ScientificWriting">Lab material</a>
+</li>
 </ul>
 
 <h3>
