Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
 
 <ul>
 <li>
-<strong>Syllabus 2015</strong> (<a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2015.pdf?raw=true">link</a>) - timetable and room information for the course</li>
+<strong>Syllabus 2015</strong> - timetable and room information for the course (<a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2015.pdf?raw=true">link</a>) </li>
 <li>
-<strong>Campus management</strong> (<a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">link</a>) - the course description in the course catalog of the university</li>
+<strong>Campus management</strong> - the course description in the course catalog of the university (<a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">link</a>) </li>
 <li>
-<strong>Ilias</strong> (<a href="https://ilias.uni-freiburg.de/goto.php?target=exc_262099&amp;client_id=unifreiburg">link</a>) - course material will be posted here</li>
-<li>Questions / contact: <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a>
+<strong>Ilias</strong> - course material will be posted here (<a href="https://ilias.uni-freiburg.de/goto.php?target=exc_262099&amp;client_id=unifreiburg">link</a>)</li>
+<li>
+<strong>Questions / contact</strong> - <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a>
 </li>
 </ul>
 
@@ -61,21 +62,21 @@
 
 <ul>
 <li>
-<strong>Literature Research</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch">Lab material</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Literature/Practical/Practical_LiteratureResearch.pdf">practical</a>
+<strong>Literature Research</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch">lab</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Literature/Practical/Practical_LiteratureResearch.pdf">practical</a>
 </li>
 <li>
-<strong>Project Organization</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization">Lab material</a>
+<strong>Project Organization</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization">lab</a>
 </li>
 <li>
-<strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">Lab material</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">script</a></strong> </li>
+<strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">lab</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">SCRIPT</a></strong> </li>
 <li>
-<strong>Statistics with R</strong> <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/Statistics">Lab material</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf">script</a></strong>
+<strong>Statistics with R</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/Statistics">lab</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf">SCRIPT</a></strong>
 </li>
 <li>
-<strong>Version Control</strong> <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl">Lab material</a>
+<strong>Version Control</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl">lab</a>
 </li>
 <li>
-<strong>Scientific Writing</strong> <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ScientificWriting">Lab material</a>
+<strong>Scientific Writing</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ScientificWriting">lab</a>
 </li>
 </ul>
 
