--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
 
 <ul>
 <li>
-<strong>Literature Research</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch">lab</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Literature/Practical/Practical_LiteratureResearch.pdf">practical</a>
+<strong>Literature Research</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch">lab material</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Literature/Practical/Practical_LiteratureResearch.pdf">practical</a>
 </li>
 <li>
-<strong>Project Organization</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization">lab</a>
+<strong>Project Organization</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization">lab material</a>
 </li>
 <li>
-<strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">lab</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">SCRIPT</a></strong> </li>
+<strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">lab material</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">script</a></strong> </li>
 <li>
-<strong>Statistics with R</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/Statistics">lab</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf">SCRIPT</a></strong>
+<strong>Statistics with R</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/Statistics">lab material</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf">script</a></strong>
 </li>
 <li>
-<strong>Version Control</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl">lab</a>
+<strong>Version Control</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl">lab material</a>
 </li>
 <li>
-<strong>Scientific Writing</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ScientificWriting">lab</a>
+<strong>Scientific Writing</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ScientificWriting">lab material</a>
 </li>
 </ul>
 
